--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  margin: 100px;
   font-family: Outfit;
+  background-color: hsl(212, 45%, 89%);
 }
 
 body h1 {
@@ -14,12 +17,33 @@ body h1 {
 body p {
   font-size: 15px;
   font-weight: 400;
+  margin: 0;
+  padding: 15px;
   color: hsl(220, 15%, 55%)
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  padding: 15px;
+  width: 300px;
+  background-color: hsl(0, 0%, 100%);
+}
+
+.attribution { 
+  font-size: 11px; 
+  text-align: center; 
+}
+
+.attribution a { 
+  color: hsl(228, 45%, 44%); 
+}
+
+.qr {
+  height: auto;
+  width: 300px;
+  border-radius: 20px;
 }
 
